# solana-bonding-curve

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package.json
_.cargo/: config.toml
app/: Makefile  package-lock.json  package.json  tsconfig.json  vite.config.js
app/src/: App.tsx  actions.ts  main.jsx  setup.ts  utils.ts  utls.ts
idl/: bonding_curve.json  bonding_curve.ts
migrations/: deploy.ts
programs/solana-bonding-curve/: Cargo.toml  build.rs
programs/solana-bonding-curve/src/: errors.rs  events.rs  lib.rs  omni_params.rs  utils.rs  xyber_params.rs
programs/solana-bonding-curve/src/curves/: mod.rs  smooth.rs  traits.rs
programs/solana-bonding-curve/src/events/: mod.rs  token_launched.rs
programs/solana-bonding-curve/src/instructions/: buy.rs  core_states.rs  create.rs  escrow.rs  init_0_core_state.rs  init_1_init_and_mint.rs  init_1_mint.rs  init_1_setup_token.rs  init_2_initial_buy.rs  init_2_mint_full_supply.rs  init_3_set_metadata.rs  metadata.rs  mint.rs  mod.rs  sell.rs  trade_buy.rs  trade_sell.rs  withdraw.rs
programs/solana-bonding-curve/src/state/: bonding_curve_coefficients.rs  mod.rs  owned_token.rs  target_chain.rs  token_launch_params.rs
qa/: minted_tokens.py  plot_bonding_curve.py
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  pda.ts  types.ts
tests/: constants.ts  solana-bonding-curve.ts  xybercore-stats.spec.ts
