[package]
name = "solana-bonding-curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
borsh = { version = "0.10.3", features = ["std"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }

[dependencies.token_factory]
path = "/Users/wotori/git/xyber-labs/xyber/solana-token-factory/programs/token_factory" # TODO: move to github
package = "token_factory"
features = ["cpi"]
